--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   firebase_core: ^2.15.1
   firebase_auth: ^4.9.0
   water_drop_nav_bar: ^2.2.0+5
+  flutter_svg: ^2.0.7
+  badges: ^3.1.2
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +69,7 @@ flutter:
     - images\ImageIcon.png
     - images\Line1.png
     - images\Line2.png
+    
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
