--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   water_drop_nav_bar: ^2.2.0+5
   flutter_svg: ^2.0.7
   badges: ^3.1.2
+  cloud_firestore: ^4.9.2
+  buttons_tabbar: ^1.3.7+1
 
 dev_dependencies:
   flutter_test:
