--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   badges: ^3.1.2
   cloud_firestore: ^4.9.2
   buttons_tabbar: ^1.3.7+1
+  fan_carousel_image_slider: ^0.1.2
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
@@ -67,10 +69,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images\Emoji.png
-    - images\ImageIcon.png
-    - images\Line1.png
-    - images\Line2.png
+    - images/
     
   #   - images/a_dot_ham.jpeg
 
