--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   buttons_tabbar: ^1.3.7+1
   fan_carousel_image_slider: ^0.1.2
   flutter_rating_bar: ^4.0.1
+  lottie: ^2.6.0
 
 dev_dependencies:
   flutter_test:
